feat(typeset): added fixed heading

--- a/src/pages/guidelines/typography/type-sets.mdx
+++ b/src/pages/guidelines/typography/type-sets.mdx
@@ -99,6 +99,8 @@ type size remains constant regardless of break point.
 Creators of web pages also use the fixed headings `-01` and `-02` where smaller
 headings are needed.
 
+<TypesetStyle typesets="fixedHeadings" />
+
 ## Fluid heading styles
 
 The fluid heading styles are primarily used in web pages, and are therefore part
