feat(typesets): added fluid callout styles

--- a/src/pages/guidelines/typography/type-sets.mdx
+++ b/src/pages/guidelines/typography/type-sets.mdx
@@ -109,10 +109,14 @@ styles change size at different breakpoints. They may be used in product pages
 where text sits outside of a container, and a blend of expressive and productive
 type styles is desired for hierarchy and distinction.
 
+<TypesetStyle typesets="fluidHeadings" breakpointControls={true} />
+
 ## Fluid callout styles
 
 These callout styles are part of the expressive set and being fluid, they will
 adjust at different breakpoints.
+
+<TypesetStyle typesets="fluidCallouts" breakpointControls={true} />
 
 ## Fluid display styles
 
