remove token list

--- a/src/pages/guidelines/color/implementation.mdx
+++ b/src/pages/guidelines/color/implementation.mdx
@@ -242,8 +242,9 @@ Contextual tokens have all the same type of tokens as the layer set except
 without the number prefixes. It does not matter what layer it sits on, the
 contextual token is always the same across layer levels.
 
-```
-## Contextual token list
+<!---
+```scss
+// Contextual token list
 
 $layer
 $layer-active
@@ -259,6 +260,7 @@ $border-subtle
 $border-subtle-selected
 $border-strong
 ```
+--->
 
 <Row>
 <Column colLg={8}>
@@ -303,8 +305,6 @@ behind and above the tabs; it uses `$background`. However, there are no sets so
 with each level added simply reuse the same tokens. The tabs and the tile live
 on different levels but they both use the `$layer` token that will output a
 different values in code with the help of the layer component.
-
-- Contextual token: magenta
 
 <Row>
 <Column colLg={12}>
