feat(typeset): added fluid display

--- a/src/pages/guidelines/typography/type-sets.mdx
+++ b/src/pages/guidelines/typography/type-sets.mdx
@@ -123,6 +123,8 @@ adjust at different breakpoints.
 These display styles are part of the expressive set and being fluid, they will
 adjust at different breakpoints.
 
+<TypesetStyle typesets="fluidDisplay" breakpointControls={true} />
+
 ## Questions?
 
 _For IBMers only:_ If you have any questions about using either of these
