fix(typeset): fixes for jeannie

--- a/src/pages/guidelines/typography/type-sets.mdx
+++ b/src/pages/guidelines/typography/type-sets.mdx
@@ -123,6 +123,10 @@ adjust at different breakpoints.
 These display styles are part of the expressive set and being fluid, they will
 adjust at different breakpoints.
 
+<InlineNotification kind="warning">
+  Never use this style as the main headline.
+</InlineNotification>
+
 <TypesetStyle typesets="fluidDisplay" breakpointControls={true} />
 
 ## Questions?
