--- a/src/pages/components/notification/usage.mdx
+++ b/src/pages/components/notification/usage.mdx
@@ -239,7 +239,7 @@ There are two types of toast notifications—polite and assertive. Polite toast
 notifications are used to display a message to the user that does not interrupt
 keyboard and screen reader users' current task and then queues the notification
 until whatever task the user is currently working on is complete. Assertive
-toast notifications interrupt a users task when triggered and are more intrusive
+toast notifications interrupt a user's task when triggered and are more intrusive
 to keyboard and screen reader users.
 
 | Type      | Purpose                                                                                                                                                                                                                                |
