update fluid table descriptions based on review

--- a/src/pages/guidelines/typography/type-sets.mdx
+++ b/src/pages/guidelines/typography/type-sets.mdx
@@ -33,8 +33,7 @@ available within the one [Sketch kit](/designing/design-kits/).
 <AnchorLink>Body styles</AnchorLink>
 <AnchorLink>Fixed heading styles</AnchorLink>
 <AnchorLink>Fluid heading styles</AnchorLink>
-<AnchorLink>Fluid callout styles</AnchorLink>
-<AnchorLink>Fluid display styles</AnchorLink>
+<AnchorLink>Fluid callout and display styles</AnchorLink>
 <AnchorLink>Questions</AnchorLink>
 
 </AnchorLinks>
@@ -105,27 +104,21 @@ headings are needed.
 
 The fluid heading styles are primarily used in web pages, and are therefore part
 of the expressive set of type styles. These headings are responsive and the type
-styles change size at different breakpoints. They may be used in product pages
+styles change size at different breakpoints.
+
+Do not use these styles inside a container. They may be used in product pages
 where text sits outside of a container, and a blend of expressive and productive
 type styles is desired for hierarchy and distinction.
 
 <TypesetStyle typesets="fluidHeadings" breakpointControls={true} />
 
-## Fluid callout styles
+## Fluid callout and display styles
 
-These callout styles are part of the expressive set and being fluid, they will
-adjust at different breakpoints.
+The callout and display styles are part of the expressive set and being fluid,
+they will adjust at different breakpoints. Do not use these styles inside a
+container.
 
 <TypesetStyle typesets="fluidCallouts" breakpointControls={true} />
-
-## Fluid display styles
-
-These display styles are part of the expressive set and being fluid, they will
-adjust at different breakpoints.
-
-<InlineNotification kind="warning">
-  Never use this style as the main headline.
-</InlineNotification>
 
 <TypesetStyle typesets="fluidDisplay" breakpointControls={true} />
 
