--- a/src/pages/guidelines/typography/type-sets.mdx
+++ b/src/pages/guidelines/typography/type-sets.mdx
@@ -118,9 +118,7 @@ The callout and display styles are part of the expressive set and being fluid,
 they will adjust at different breakpoints. Do not use these styles inside a
 container.
 
-<TypesetStyle typesets="fluidCallouts" breakpointControls={true} />
-
-<TypesetStyle typesets="fluidDisplay" breakpointControls={true} />
+<TypesetStyle typesets="fluidCallouts,fluidDisplay" breakpointControls={true} />
 
 ## Questions?
 
