feat: update ia

--- a/src/pages/releases/overview/index.mdx
+++ b/src/pages/releases/overview/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: Releases
+title: Overview
 description:
   Learn about our latest updates, our release history, and what the team has
   planned for Carbon’s future.
