--- a/src/pages/releases/v10/develop.mdx
+++ b/src/pages/releases/v10/develop.mdx
@@ -1,5 +1,5 @@
 ---
-title: Migration guide
+title: v10
 description:
   This guide includes everything you need to migrate your offering from an older
   version of Carbon to v10.
