--- a/src/pages/releases/v11/overview.mdx
+++ b/src/pages/releases/v11/overview.mdx
@@ -1,8 +1,9 @@
 ---
-title: The v11 release
+title: v11
 description:
-  The Carbon v11 release includes quality of life updates for designers and
-  developers, and with no brand updates, no product redesigns are required.
+  This guide includes everything you need to migrate your offering from an
+  earlier version of Carbon to v10.
+tabs: ['Overview', 'Migration']
 ---
 
 <PageDescription>
