--- a/src/pages/releases/v11/overview.mdx
+++ b/src/pages/releases/v11/overview.mdx
@@ -15,16 +15,16 @@ developers, and with no brand updates, no product redesigns are required.
 
 <InlineNotification>
 
-**Note:** The Carbon v11 release is currently an alpha release. Be on the
-lookout for the public preview release available in the coming months.
+**Note:** The Carbon v11 release is currently in beta release. Be on the lookout
+for the public preview release available in the coming months.
 
 </InlineNotification>
 
 <AnchorLinks>
 
 <AnchorLink>Overview</AnchorLink>
-<AnchorLink>Read more in Medium</AnchorLink>
-<AnchorLink>June 15th FEDucation</AnchorLink>
+<AnchorLink>Read</AnchorLink>
+<AnchorLink>Watch</AnchorLink>
 <AnchorLink>Release FAQs</AnchorLink>
 
 </AnchorLinks>
@@ -56,7 +56,7 @@ brand-driven product redesigns.
 - Assets that are deprecated in v10 will remain in v11 and will be removed in
   v12.
 
-## Read more in Medium
+## Read
 
 <Row>
 <Column colLg={4} colMd={4} noGutterMdLeft>
@@ -85,11 +85,11 @@ brand-driven product redesigns.
 </Column>
 </Row>
 
-## June 15th FEDucation
+## Watch
 
-As part of IBM's front-end developer educational series, Josh Black introduces
-the upcoming v11 release, its features, and how to get involved and provide
-feedback.
+As part of IBM's front-end developer educational series, FEDucation, Josh Black
+introduces the upcoming v11 release, its features, and how to get involved and
+provide feedback.
 
 <Video title="Carbon v11 video" vimeoId="567122059" />
 
