fix(migration): updated links

--- a/src/pages/releases/overview/index.mdx
+++ b/src/pages/releases/overview/index.mdx
@@ -54,7 +54,7 @@ layout building in line with the design language.
 With no changes to the IBM Design Language, v11 will not require any
 brand-driven product redesigns and teams are free to update at their
 convenience. For more details about this release, see our
-[v11 release page](/whats-happening/v11-release/).
+[v11 release page](/releases/v11/overview).
 
 ### Carbon v10
 
